--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2001,4 +2001,36 @@ Not supports in Firefox and IE */
   margin-bottom: 2rem;
 }
 
+.merchModal{
+  background-color: #d6d6d6 !important;
+  border-radius: 23px !important;
+}
+
+.hfc{
+  position:relative;
+  
+}
+
+.merchImg{
+  width:100%;
+  height: 100%;
+  border-radius: 23px;
+}
+.merchBody{
+ padding: 0;
+ border-radius: 23px !important;
+ 
+}
+.merchClose{
+  position:absolute;
+  top:5px;
+  right:5px;
+  color: red;
+  background-color: transparent;
+  border: 0;
+ font-size: 20px;
+}
+.img-team{
+  padding: 0.1rem;
+}
 
